--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,26 +1,27 @@
 {
-        "extends": [
-                "eslint:recommended",
-                "plugin:react/recommended",
-                "plugin:@typescript-eslint/recommended"
-        ],
-        "plugins": ["react", "@typescript-eslint"],
-        "parser": "@typescript-eslint/parser",
-        "parserOptions": {
-                "ecmaVersion": 2018,
-                "sourceType": "module",
-                "ecmaFeatures": {
-                        "jsx": true
-                }
-        },
-        "rules": {
-                "@typescript-eslint/ban-ts-comment": "off",
-                "@typescript-eslint/no-explicit-any": "off",
-                "react/prop-types": 0
-        },
-        "settings": {
-                "react": {
-                        "version": "detect"
-                }
-        }
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react/jsx-runtime"
+  ],
+  "plugins": ["react", "@typescript-eslint"],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "rules": {
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "react/prop-types": 0
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  }
 }
