--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,3 +34,7 @@ jobs:
         run: |
           npm run lint
           npm run build
+      - name: Deploy 
+        with:
+          branch: gh-pages
+          folder: build
