--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,3 +34,7 @@ jobs:
         run: |
           npm run lint
           npm run build
+      - name: upload production artifacts
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: build
