feat:deploy config

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,3 +34,9 @@ jobs:
         run: |
           npm run lint
           npm run build
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@4.1.1
+        with:
+          ACCESS_TOKEN: ${{ secrets.TABLE_ACCESS_TOKEN }}
+          BRANCH: gh-pages
+          folder: build
